# TDengine-Loongarch

./: .gitignore  CMakeLists.txt  README-CN.md  README.md
.github/workflows/: new-framework-test.yml  tdengine-build.yml
cmake/: check_env.cmake  conan.cmake  define.cmake  enterprise.cmake  external.cmake  install.cmake  options.cmake  platform.cmake  version.cmake
contrib/: CMakeLists.txt
contrib/TSZ/: CMakeLists.txt
contrib/lemon/: CMakeLists.txt
contrib/test/: CMakeLists.txt
contrib/test/craft/: CMakeLists.txt
docs/: typos.toml
docs/en/06-advanced/05-data-in/: 06-opcda.md
docs/en/07-develop/: 04-schemaless.md  09-udf.md  connector-security-best-practices.md
docs/en/08-operation/: 13-network.md
docs/en/08-operation/21-performance/: 22-jmeter.md
docs/en/10-third-party/03-visual/: 01-grafana.md
docs/en/10-third-party/05-bi/: 11-superset.md  12-tableau.md  13-excel.md  16-ssrs.md  17-ontop.md
docs/en/10-third-party/07-tool/: 01-dbeaver.md  05-jetbrains.md
docs/en/10-third-party/09-iot/: 01-node-red.md  02-ignition.md
docs/en/14-reference/01-components/: 01-taosd.md  03-taosadapter.md  12-tdinsight.md
docs/en/14-reference/02-tools/: 08-mcp-tdengine-tsdb.md  11-taosgen.md
docs/en/14-reference/03-taos-sql/: 01-datatype.md  52-show.md  61-grant.md  index.md
docs/en/14-reference/05-connector/: 14-java.md
docs/en/26-tdinternal/: 06-vtable-query.md
docs/en/27-train-faq/: index.md
docs/en/28-releases/03-notes/: 3.3.6.6.md  3.3.6.9.md
docs/examples/perspective/: prsp-viewer.html
docs/examples/taosgen/: taosgen_config.yaml
docs/zh/07-develop/: 05-stmt.md  07-tmq.md  09-udf.md
docs/zh/26-tdinternal/: 06-vtable-query.md
docs/zh/27-train-faq/: 01-faq.md
examples/c/: CMakeLists.txt
include/common/: streamMsg.h  tglobal.h  tmsg.h  tmsgdef.h
include/libs/executor/: executor.h
include/libs/function/: taosudf.h
include/libs/nodes/: querynodes.h
include/libs/qcom/: query.h
include/libs/scalar/: scalar.h
include/os/: osSystem.h
include/util/: tdef.h  tgeosctx.h
packaging/: pack_community_tar.sh  setup_env.sh
packaging/docker/: entrypoint.sh
packaging/smokeTest/: test_community_package_install_messages.sh
packaging/tools/: install.sh  make_install.bat  make_install.sh  remove.sh
source/client/: CMakeLists.txt
source/client/inc/: clientInt.h
source/client/src/: clientMain.c  clientSml.c  clientStmt.c  clientStmt2.c  taos.rc.in  taosnative.rc.in
source/client/test/: CMakeLists.txt  connectOptionsTest.cpp  session.cpp  stmt2Test.cpp
source/client/wrapper/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/src/: tglobal.c
source/common/test/: CMakeLists.txt  dataformatTest.cpp
source/dnode/mgmt/: CMakeLists.txt
source/dnode/mgmt/mgmt_dnode/: CMakeLists.txt
source/dnode/mgmt/mgmt_mnode/src/: mmWorker.c
source/dnode/mgmt/mgmt_snode/: CMakeLists.txt
source/dnode/mgmt/mgmt_vnode/: CMakeLists.txt
source/dnode/mgmt/mgmt_xnode/src/: xmInt.c
source/dnode/mgmt/node_mgmt/: CMakeLists.txt
source/dnode/mgmt/node_util/src/: dmFile.c
source/dnode/mgmt/test/: CMakeLists.txt
source/dnode/vnode/: CMakeLists.txt
source/libs/: CMakeLists.txt
source/libs/azure/: CMakeLists.txt
source/libs/catalog/: CMakeLists.txt
source/libs/command/: CMakeLists.txt
source/libs/decimal/: CMakeLists.txt
source/libs/executor/: CMakeLists.txt
source/libs/function/: CMakeLists.txt
source/libs/geometry/: CMakeLists.txt
source/libs/index/: CMakeLists.txt
source/libs/monitor/: CMakeLists.txt
source/libs/monitorfw/: CMakeLists.txt
source/libs/new-stream/: CMakeLists.txt
source/libs/nodes/: CMakeLists.txt
source/libs/parser/: CMakeLists.txt
source/libs/planner/: CMakeLists.txt
source/libs/pyudf/: CMakeLists.txt
source/libs/pyudf/src/: taospyudf.cpp  taospyudf.h  taospyudf.rc.in
source/libs/qcom/: CMakeLists.txt
source/libs/qworker/: CMakeLists.txt
source/libs/scalar/: CMakeLists.txt
source/libs/scheduler/: CMakeLists.txt
source/libs/sync/: CMakeLists.txt
source/libs/tcs/: CMakeLists.txt
source/libs/tdb/: CMakeLists.txt
source/libs/tfs/: CMakeLists.txt
source/libs/tmqtt/: CMakeLists.txt
source/libs/transport/: CMakeLists.txt
source/libs/wal/: CMakeLists.txt
source/os/: CMakeLists.txt
source/os/src/: osDir.c  osFile.c  osSocket.c  osSysinfo.c  osSystem.c  osTimezone.c
source/os/test/: osDirTests.cpp  osSemaphoreTests.cpp  osSystemTests.cpp
source/util/: CMakeLists.txt
source/util/src/: tconfig.c  tcrc32c.c  tmempool.c  tworker.c  version.c.in
source/util/test/: CMakeLists.txt  encodeTest.cpp  queryAutoQWorkerTest.cpp  utilTests.cpp
test/: conftest.py  pyproject.toml
test/cases/12-UDFs/: conftest.py  test_udf_c.py  test_udf_cfg1.py  test_udf_cfg2.py  test_udf_create.py  test_udf_main.py  test_udf_py.py  test_udf_restart_taosd.py  test_udf_test.py  test_udf_with_const.py  udf_utils.py
test/cases/20-RSMAs/: test_rsma.py
test/cases/27-Mount/: test_mount_basic.py
test/cases/32-Grants/: test_grant_basic.py
test/cases/70-Cluster/: cluster_common_check.py  test_balance_vgroup_leader_db_name.py
test/ci/: cases.task  checkAsan.sh  pytest.ps1  pytest.sh  rerun.sh  run_case.sh  run_container.sh  run_win_cases.py
test/new_test_framework/utils/: before_test.py  common.py  compatibilityUtil.py  log.py  pathFinding.py  tmqUtil.py
tests/: CMakeLists.txt  riscvtest.py  riscvtest.sh  riscvtest_retry.py
tests/army/frame/: common.py
tests/parallel_test/: run_container.sh
tests/pytest/util/: common.py
tests/taosc_test/: CMakeLists.txt
tools/: CMakeLists.txt
tools/rocks-reader/: CMakeLists.txt
tools/s3toss/: go.sum
tools/shell/: CMakeLists.txt
tools/shell/src/: shellArguments.c  shellCommand.c  shellEngine.c
tools/taos-tools/: CMakeLists.txt
tools/taos-tools/src/: CMakeLists.txt  taosdump.c
tools/tdgpt/: requirements.txt
tools/tdgpt/taosanalytics/: app.py  exception.py  log.py  service_registry.py
tools/tdgpt/tests/: restful_api_test.py  unit_test.py
utils/: CMakeLists.txt
utils/test/c/: CMakeLists.txt
utils/tsim/: CMakeLists.txt
(+145 files in other folders)
